chore: update .env.example to include TAVILY_API_KEY and modify TavilyClient initialization in main.py

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ FIB_CLIENT_SECRET=<your-fib-client-secret>
 LANGSMITH_API_KEY=<your-langsmith-api-key>
 LANGSMITH_TRACING=true
 GOOGLE_CLOUD_PROJECT=alta-mente
+TAVILY_API_KEY=<your-tavily-api-key>
