--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,15 @@ description = ""
 requires-python = ">=3.13"
 dependencies = [
     "deepagents>=0.2.8",
+    "deepeval>=2.0.0",
     "langchain-google-vertexai>=3.1.0",
+    "langgraph-api>=0.5.28",
     "langgraph-cli[inmem]>=0.4.7",
     "langsmith>=0.4.49",
+    "mcp>=1.0.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
     "tavily-python>=0.7.13",
 ]
 
@@ -24,13 +30,19 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
-sources = ["src"]
+
+[tool.uv]
+package = true
 
 [tool.ruff]
-line-length = 120
-target-version = "py311"
+line-length = 150
+target-version = "py313"
 
 [tool.ruff.lint]
 select = [
