update env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-FIB_CLIENT_ID=<your-fib-client-id>
-FIB_CLIENT_SECRET=<your-fib-client-secret>
-LANGSMITH_API_KEY=<your-langsmith-api-key>
+FIB_CLIENT_ID=<>
+FIB_CLIENT_SECRET=<>
+LANGSMITH_API_KEY=<>
 LANGSMITH_TRACING=true
 GOOGLE_CLOUD_PROJECT=alta-mente
-TAVILY_API_KEY=<your-tavily-api-key>
+GOOGLE_CLOUD_LOCATION=europe-west1
+FIB_AUTH_URL="https://api.fib.upc.edu/v2/o/authorize/?client_id=5j2jJzeSQcXwP4anaQRIjtKiMzegYyVj2aLVA1dN&redirect_uri=http://localhost:8085/callback&response_type=code&state=random_state_string"
+FIB_REDIRECT_URI="http://localhost:8085/callbackTAVILY_API_KEY=tvly-placeholder"
+TAVILY_API_KEY=<>
+GEMINI_API_KEY=<>
