--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,19 @@ requires-python = ">=3.13"
 dependencies = [
     "deepagents>=0.2.8",
     "deepeval>=2.0.0",
+    "google-auth>=2.43.0",
+    "google-genai>=1.53.0",
     "langchain-google-vertexai>=3.1.0",
     "langgraph-api>=0.5.28",
     "langgraph-cli[inmem]>=0.4.7",
     "langsmith>=0.4.49",
     "mcp>=1.0.0",
+    "pillow>=12.0.0",
     "pydantic>=2.0.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "tavily-python>=0.7.13",
+    "tqdm>=4.67.1",
 ]
 
 license = {text = "MIT"}
