--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,12 @@ dependencies = [
     "deepeval>=2.0.0",
     "google-auth>=2.43.0",
     "google-genai>=1.53.0",
+    "langchain-community>=0.4.1",
     "langchain-google-vertexai>=3.1.0",
     "langgraph-api>=0.5.28",
     "langgraph-cli[inmem]>=0.4.7",
     "langsmith>=0.4.49",
+    "llama-cpp-python>=0.3.16",
     "mcp>=1.0.0",
     "pillow>=12.0.0",
     "pydantic>=2.0.0",
