--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "google-auth>=2.43.0",
     "google-genai>=1.53.0",
     "langchain-community>=0.4.1",
+    "langchain-google-genai>=4.1.1",
     "langchain-google-vertexai>=3.1.0",
     "langgraph-api>=0.5.28",
     "langgraph-cli[inmem]>=0.4.7",
